--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "build": "tsc",
-    "start": "node dist/server/index.js",
-    "dev:client": "vite",
-    "build:client": "vite build",
-    "postinstall": "npm run build"
+    "start": "tsx index.ts",
+    "build": "echo 'no build needed'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -53,6 +50,7 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
+    "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "file-saver": "^2.0.5",
@@ -64,12 +62,16 @@
     "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.1.5",
+    "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-icons": "^5.4.0",
+    "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -81,15 +83,35 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@replit/vite-plugin-cartographer": "^0.2.7",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.1.3",
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/express": "4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.11",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
+    "@types/pg": "^8.15.5",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.31.4",
+    "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vite": "^5.4.19"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8"
   }
 }
