--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,11 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "noEmit": false,
     "outDir": "dist",
     "rootDir": "server",
-    "module": "CommonJS",
-    "target": "ES2022"
+    "module": "ES2022",
+    "target": "ES2022",
+    "noEmit": false
   },
   "include": ["server/**/*"]
 }
