--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,13 +1,14 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "server",       // your backend source folder
-    "module": "ES2022",
     "target": "ES2022",
-    "strict": true,
+    "module": "ES2022",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "strict": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "outDir": "dist",
+    "types": ["node", "vite/client"]
   },
-  "include": ["server/**/*"]
+  "include": ["Backend/src", "Frontend/src"]
 }
