Fix tsconfig.prod.json include path for server folder

--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -8,7 +8,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "types": ["node", "vite/client"]
+    "types": ["node"]
   },
-  "include": ["Backend/src", "Frontend/src"]
+  "include": ["server/**/*"],
+  "exclude": ["dist", "client"]
 }
