--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "rest-express",
+  "name": "my-notes-root",
   "version": "1.0.0",
-  "type": "module",
-  "license": "MIT",
+  "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "tsc -p tsconfig.prod.json",
-    "start": "node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "install": "cd Backend && npm install && cd ../Frontend && npm install",
+    "build": "cd Backend && npm run build && cd ../Frontend && npm run build",
+    "start": "cd Backend && npm run start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -94,7 +91,7 @@
     "@types/express-session": "^1.18.0",
     "@types/file-saver": "^2.0.7",
     "@types/multer": "^2.0.0",
-    "@types/node": "^20.19.22",
+    "@types/node": "^20.19.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.15.5",
